[gd_scene load_steps=3 format=3 uid="uid://dsmubrqviqhuu"]

[ext_resource type="Script" path="res://scripts/ui/MainMenu.gd" id="1_mainmenu"]
[ext_resource type="Texture2D" uid="uid://melnik_bg" path="res://assets/ui/melnik_main_menu_bg.png" id="2_bg"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.0
offset_top = -273.0
offset_right = 227.0
offset_bottom = 270.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameTitle" type="Label" parent="MenuContainer"]
modulate = Color(1, 1, 1, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 64
text = "ZLODĚJ"
horizontal_alignment = 1

[node name="SubTitle" type="Label" parent="MenuContainer"]
modulate = Color(0.32549, 0.658824, 1, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "Mělník Edition"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="MenuContainer"]
layout_mode = 2

[node name="Btn_Continue" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
disabled = true
text = "Pokračovat"

[node name="Btn_NewGame" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Nová hra"

[node name="Btn_Settings" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Nastavení"

[node name="Btn_Credits" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Autoři"

[node name="Btn_Quit" type="Button" parent="MenuContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
text = "Ukončit"

[node name="VersionLabel" type="Label" parent="."]
modulate = Color(0.45882353, 0.45882353, 0.45882353, 1)
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
text = "Verze 3.0"